care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/CAREgiftsXmas_previous_3__c.object-meta.xml
<CustomObject>
    <label>CAREgiftsXmas_previous_3</label>
    <nameField>
        <label>CAREgiftsXmas_previous_3</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAREgiftsXmas_previous_3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>