care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>