care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/Donation_Source__c.field-meta.xml
<CustomField>
    <fullName>Donation_Source__c</fullName>
    <label>Donation Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>