care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <label>Donor_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>