care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/First_Gift__c.field-meta.xml
<CustomField>
    <fullName>First_Gift__c</fullName>
    <label>First_Gift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>