care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/First_Gift_Only__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First_Gift_Only</label>
    <type>Checkbox</type>
</CustomField>