care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/First_Type_New_Donor__c.field-meta.xml
<CustomField>
    <fullName>First_Type_New_Donor__c</fullName>
    <label>First_Type_New_Donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>