care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/Fiscal_Q__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Q__c</fullName>
    <label>Fiscal_Q</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>