care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal_Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>