care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/SF_Constituent_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Constituent_Id__c</fullName>
    <label>SF Constituent Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>