care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/Total_Number_of_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Gifts__c</fullName>
    <label>Total Number of Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>