care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/fields/Xmas_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Xmas_Gifts__c</fullName>
    <label>Xmas_Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>