care-australia-uat/force-app/main/default/objects/CAREgiftsXmas_previous_3__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SF_Constituent_Id__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Donation_Source__c</columns>
    <columns>Channel__c</columns>
    <columns>Subtype__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Primary_Campaign_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>